[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "netcheck"
version = "1.0.0"
description = "A comprehensive network interface analysis tool for GNU/Linux"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "AGPL-3.0-or-later"}
authors = [{name = "Sascha"}]
dependencies = []

[project.urls]
Homepage = "https://github.com/Sascha-1/netcheck"
Repository = "https://github.com/Sascha-1/netcheck"

# ============================================================================
# Pytest Configuration
# ============================================================================

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--strict-config",
    "--tb=short",
    "--cov=.",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-branch",
]
markers = [
    "slow: marks tests as slow",
    "integration: marks tests as integration tests",
]

# Consistent ignore patterns across tools
norecursedirs = [
    "build",
    "dist",
    ".venv",
    "venv",
    "env",
    ".mypy_cache",
    ".pytest_cache",
    "htmlcov",
    "__pycache__",
]

# ============================================================================
# Coverage Configuration
# ============================================================================

[tool.coverage.run]
source = ["."]
omit = [
    "*/__pycache__/*",
    "*/venv/*",
    "*/env/*",
    "*/.venv/*",
    "*/build/*",
    "*/dist/*",
    "*/.mypy_cache/*",
    "*/.pytest_cache/*",
    "*/htmlcov/*",
    "cleanup.sh",
    "cleanup.py",
]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]
precision = 2
show_missing = true

[tool.coverage.html]
directory = "htmlcov"

# ============================================================================
# Mypy Configuration
# ============================================================================

[tool.mypy]
python_version = "3.12"

# Strict mode - enforced everywhere, no overrides
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
show_error_codes = true
show_error_context = true
pretty = true

# Scan all .py files in project (like pytest and pylint)
files = ["."]

# Consistent exclude patterns
exclude = [
    "^build/",
    "^dist/",
    "^\\.venv/",
    "^venv/",
    "^env/",
    "^\\.mypy_cache/",
    "^\\.pytest_cache/",
    "^htmlcov/",
    "^__pycache__/",
]

# ============================================================================
# Ruff Configuration - Strict Modern Python Linter
# ============================================================================

[tool.ruff]
# Python version
target-version = "py312"

# Line length (match black/mypy/pylint)
line-length = 100

# Scan all .py files (like pytest, mypy, pylint)
include = ["*.py"]

# Consistent exclude patterns with other tools
exclude = [
    ".venv",
    "venv",
    "env",
    "build",
    "dist",
    ".mypy_cache",
    ".pytest_cache",
    "htmlcov",
    "__pycache__",
    ".git",
    ".tox",
    "*.egg-info",
]

[tool.ruff.lint]
# Enable comprehensive rule sets (strict configuration)
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "D",      # pydocstyle
    "UP",     # pyupgrade
    "YTT",    # flake8-2020
    "ANN",    # flake8-annotations
    "ASYNC",  # flake8-async
    "S",      # flake8-bandit (security)
    "BLE",    # flake8-blind-except
    "FBT",    # flake8-boolean-trap
    "B",      # flake8-bugbear
    "A",      # flake8-builtins
    "COM",    # flake8-commas
    "C4",     # flake8-comprehensions
    "DTZ",    # flake8-datetimez
    "T10",    # flake8-debugger
    "EM",     # flake8-errmsg
    "EXE",    # flake8-executable
    "FA",     # flake8-future-annotations
    "ISC",    # flake8-implicit-str-concat
    "ICN",    # flake8-import-conventions
    "G",      # flake8-logging-format
    "INP",    # flake8-no-pep420
    "PIE",    # flake8-pie
    "T20",    # flake8-print
    "PYI",    # flake8-pyi
    "PT",     # flake8-pytest-style
    "Q",      # flake8-quotes
    "RSE",    # flake8-raise
    "RET",    # flake8-return
    "SLF",    # flake8-self
    "SLOT",   # flake8-slots
    "SIM",    # flake8-simplify
    "TID",    # flake8-tidy-imports
    "TCH",    # flake8-type-checking
    "INT",    # flake8-gettext
    "ARG",    # flake8-unused-arguments
    "PTH",    # flake8-use-pathlib
    "TD",     # flake8-todos
    "FIX",    # flake8-fixme
    "ERA",    # eradicate (commented-out code)
    "PD",     # pandas-vet
    "PGH",    # pygrep-hooks
    "PL",     # pylint
    "TRY",    # tryceratops
    "FLY",    # flynt
    "NPY",    # numpy-specific rules
    "PERF",   # perflint
    "FURB",   # refurb
    "LOG",    # flake8-logging
    "RUF",    # ruff-specific rules
]

# Disable rules that conflict with our style or are too noisy
ignore = [
    # Docstring rules (we have docstrings where meaningful)
    "D100",  # Missing docstring in public module
    "D101",  # Missing docstring in public class
    "D102",  # Missing docstring in public method
    "D103",  # Missing docstring in public function
    "D104",  # Missing docstring in public package
    "D105",  # Missing docstring in magic method
    "D107",  # Missing docstring in __init__
    
    # Complexity rules (sometimes legitimate to violate)
    "PLR0911",  # Too many return statements
    "PLR0912",  # Too many branches
    "PLR0913",  # Too many arguments
    "PLR0915",  # Too many statements
    "PLR2004",  # Magic value used in comparison
    
    # Style preferences
    "COM812",  # Trailing comma missing (conflicts with formatter)
    "ISC001",  # Implicit string concatenation (conflicts with formatter)
    
    # Allow TODO/FIXME comments
    "TD002",  # Missing author in TODO
    "TD003",  # Missing issue link in TODO
    "FIX002", # Line contains TODO
    
    # Exception handling (sometimes broad catching is appropriate)
    "BLE001",  # Blind except Exception
    
    # Boolean positional arguments (sometimes clear from context)
    "FBT001",  # Boolean positional arg in function definition
    "FBT002",  # Boolean default value in function definition
    
    # Print statements (we use logging, but some prints are intentional)
    "T201",   # print() found (we use it in main output)
    
    # Annotations (we use strict mypy instead)
    "ANN101",  # Missing type annotation for self
    "ANN102",  # Missing type annotation for cls
    
    # Allow assert in tests
    "S101",   # Use of assert detected
    
    # Private member access (intentional in same package)
    "SLF001", # Private member accessed
    
    # Subprocess without shell=True is safe
    "S603",   # subprocess call without shell=True
    "S607",   # Starting a process with a partial path
]

[tool.ruff.lint.per-file-ignores]
# Test files can have additional violations
"tests/**/*.py" = [
    "D",        # No docstrings required in tests
    "ANN",      # No annotations required in tests
    "PLR2004",  # Magic values OK in tests
    "S101",     # Assert OK in tests
    "ARG",      # Unused arguments OK in fixtures
    "PT011",    # pytest.raises() too broad (we test broad exceptions)
]

# Cleanup script can print and use os.system
"cleanup.py" = [
    "T201",     # Print OK in cleanup script
]

[tool.ruff.lint.pydocstyle]
# Use Google-style docstrings
convention = "google"

[tool.ruff.lint.isort]
# isort configuration (matches our import style)
known-first-party = ["netcheck", "network", "utils", "models", "config", "enums"]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]

[tool.ruff.lint.flake8-type-checking]
# Enforce TYPE_CHECKING imports for type-only imports
strict = true

[tool.ruff.lint.pylint]
# Pylint-style rules via ruff
max-args = 10
max-branches = 20
max-returns = 8
max-statements = 80

# ============================================================================
# Pylint Configuration  
# ============================================================================

[tool.pylint.main]
# Use all available CPUs for parallel processing
jobs = 0

# Python version
py-version = "3.12"

# Analyze all Python files recursively
recursive = true

# NOTE: Unlike pytest/mypy, pylint requires explicit paths as arguments
# Run with: pylint .
# Or create an alias: alias pylint='pylint .'
# Or use the provided lint script: ./lint.sh

# Consistent ignore patterns with other tools (regex format for pylint)
ignore-paths = [
    "^build/.*$",
    "^dist/.*$",
    "^\\.venv/.*$",
    "^venv/.*$",
    "^env/.*$",
    "^\\.mypy_cache/.*$",
    "^\\.pytest_cache/.*$",
    "^htmlcov/.*$",
    "^__pycache__/.*$",
]

[tool.pylint.messages_control]
# Disable specific warnings that conflict with our coding style or are too noisy
disable = [
    # Docstring warnings (we have docstrings where meaningful)
    "missing-module-docstring",
    "missing-class-docstring", 
    "missing-function-docstring",
    
    # Design warnings (sometimes legitimate to violate)
    "too-few-public-methods",      # Dataclasses/DTOs often have few methods
    "too-many-arguments",          # Some functions legitimately need many args
    "too-many-locals",             # Complex functions may need many locals
    "too-many-branches",           # Detection logic has many branches
    "too-many-statements",         # Some functions are legitimately complex
    
    # Naming warnings (allow flexible naming)
    "invalid-name",                # Allow short names like 'e', 'i', 'f'
    
    # Code duplication (some similarity acceptable in tests)
    "duplicate-code",
    
    # Access warnings (we use _private functions intentionally)
    "protected-access",            # Allow calling _private functions in same package
    
    # Style warnings (handled by ruff/black)
    "line-too-long",               # Handled by ruff/black (100 char limit)
    "unnecessary-pass",            # Sometimes needed for clarity
    
    # Import warnings (handled by ruff/isort)
    "wrong-import-order",          # ruff handles this
    "ungrouped-imports",           # ruff handles this
    
    # Exception warnings (sometimes we need broad catching)
    "broad-except",                # Sometimes catching Exception is appropriate
    "broad-exception-caught",      # Sometimes catching Exception is appropriate
]

[tool.pylint.format]
# Maximum line length (match ruff/black/mypy)
max-line-length = 100

# Allow common short variable names
good-names = [
    "i", "j", "k",           # Loop counters
    "e", "ex",               # Exceptions
    "f", "fp",               # Files
    "db", "id",              # Common abbreviations
    "ip", "v4", "v6",        # Network-specific
    "_",                     # Unused variables
]

[tool.pylint.design]
# Complexity thresholds (reasonable but not too strict)
max-args = 10              # Maximum function arguments
max-attributes = 15        # Maximum class attributes
max-bool-expr = 6          # Maximum boolean expressions
max-branches = 20          # Maximum branches in a function
max-locals = 25            # Maximum local variables
max-returns = 8            # Maximum return statements
max-statements = 80        # Maximum statements in a function

[tool.pylint.basic]
# Docstring requirements (require only for public API)
no-docstring-rgx = "^_|^test_"  # Don't require docstrings for private/test functions

# Allow TODO/FIXME comments
notes = ["FIXME", "XXX"]  # Don't warn about TODO

[tool.pylint.similarities]
# Duplicate code detection
min-similarity-lines = 10  # Minimum lines to trigger duplicate warning
ignore-comments = true
ignore-docstrings = true
ignore-imports = true
ignore-signatures = true

[tool.pylint.typecheck]
# Don't warn about dynamically generated members
generated-members = ["pytest.*", "mock.*", "MagicMock.*"]

[tool.pylint.imports]
# Import preferences
allow-wildcard-with-all = false
preferred-modules = []

[tool.pylint.exceptions]
# Exception handling
overgeneral-exceptions = ["builtins.BaseException"]  # Only BaseException is too broad

[tool.pylint.logging]
# PEP 391 Compliant Logging Configuration
# =========================================
# 
# PEP 391 recommends LAZY EVALUATION for logging using % style formatting.
# This provides significant benefits:
#
# 1. PERFORMANCE: Arguments are NOT evaluated if log level is disabled
#    Example: logger.debug("Processing %d items", expensive_count())
#    If DEBUG is disabled, expensive_count() is never called
#
# 2. STRUCTURED LOGGING: Better integration with logging aggregation tools
#    (Splunk, ELK, etc.) which can parse % style format strings
#
# 3. MEMORY EFFICIENCY: String formatting only happens when message is logged
#
# CORRECT (PEP 391 compliant):
#   logger.debug("Found %d interfaces: %s", len(interfaces), ", ".join(interfaces))
#   logger.info("Processing interface %s with IP %s", name, ip)
#   logger.error("Failed to connect to %s:%d", host, port)
#
# INCORRECT (current codebase style - should be migrated):
#   logger.debug(f"Found {len(interfaces)} interfaces: {', '.join(interfaces)}")
#   logger.info(f"Processing interface {name} with IP {ip}")
#   logger.error(f"Failed to connect to {host}:{port}")
#
# MIGRATION PLAN:
# The current codebase uses f-strings in logging. To maintain backwards compatibility
# during migration, this is set to "old" to encourage proper lazy formatting for new code.
# Existing code should be gradually migrated from f-strings to % formatting.

# Use "old" (%) style for PEP 391 compliance and lazy evaluation
logging-format-style = "old"

# Specify which modules provide logging functionality
logging-modules = ["logging"]

[tool.pylint.miscellaneous]
# Don't warn about TODO comments
notes = []

[tool.pylint.refactoring]
# Refactoring suggestions (keep reasonable ones)
max-nested-blocks = 6      # Maximum nested block depth
never-returning-functions = ["sys.exit", "argparse.ArgumentParser.error"]
